<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="https_switch"
        android:title="@string/pref_title_https_switch"
        android:summary="@string/pref_description_https_switch"
        android:defaultValue="true" />

    <EditTextPreference
        android:key="host_text"
        android:title="@string/pref_title_host"
        android:defaultValue="@string/pref_default_host"
        android:selectAllOnFocus="true"
        android:inputType="textCapWords"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <EditTextPreference
        android:key="url_path_text"
        android:title="@string/pref_title_url_path"
        android:defaultValue="@string/pref_default_url_path"
        android:selectAllOnFocus="true"
        android:inputType="textUri"
        android:capitalize="none"
        android:singleLine="true"
        android:maxLines="1" />

</PreferenceScreen>
